--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,36 @@
 # main links links
+
+# Professions
+# Reasearch
+# Publications
+#Teaching
+#Group
+
 main:
+  - title: "Professions"
+    url: /talks/    
+    
+  - title: "Research"
+    url: /year-archive/
+    
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Group"
+    url: /portfolio/   
+   
+#  - title: "Portfolio"
+#    url: /portfolio/
+#  - title: "Talks"
+#    url: /talks/     
+#- title: "Blog Posts"
+#    url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+#  - title: "CV"
+#    url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Guide"
+#    url: /markdown/
