--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   #name             : "Your Sidebar Name"
   name             : "Mingqiang Wei"
-  avatar           : "profile.jpg"
+  avatar           : "profile1.jpg"
  
   bio              : "Professor at Nanjing University of Aeronautics and Astronautics"
   #location         : "Location"
