--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,10 @@
 
 main:
   - title: "Professions"
-    url: /talks/    
+    url: /professions/    
+    
+  - title: "Professions"
+    url: /talks/
     
   - title: "Research"
     url: /year-archive/
