--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
     url: /professions/    
     
   - title: "Research"
-    url: /year-archive/
+    url:/research/
     
   - title: "Publications"
     url: /publications/
