--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
     url: /research1/
     
   - title: "Publications"
-    url: /publications1/
+    url: /publications/
 
   - title: "Teaching"
     url: /teaching1/    
