--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
     url: /teaching/    
     
   - title: "Group"
-    url: /portfolio/   
+    url: /group/   
    
 #  - title: "Portfolio"
 #    url: /portfolio/
