--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   name             : "Mingqiang Wei"
   avatar           : "profile1.jpg"
  
-  bio              : "Professor at Nanjing University of Aeronautics and Astronautics"
+  bio              : "Professor and Dean of AI at Nanjing University of Aeronautics and Astronautics"
   #location         : "Location"
   location         : "Nanjing,China"
   employer         :
